name:                twitchapi
version:             0.0.1
synopsis:            Client access to Twitch.tv API endpoints
description:         Client access to Twitch.tv API endpoints
homepage:            https://github.com/wuest/haskell-twitchapi
bug-reports:         https://github.com/wuest/haskell-twitchapi/issues
license:             BSD3
license-file:        LICENSE
author:              Tina Wuest
maintainer:          tina@wuest.me
copyright:           2021 Tina Wuest
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  ghc-options:      -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction -static
  default-language: Haskell2010
  hs-source-dirs:   src

  exposed-modules:    Web.TwitchAPI.Helix.Bits
                    , Web.TwitchAPI.Helix.ChannelPoints
                    , Web.TwitchAPI.Helix.Request

  build-depends:      base            >= 4.9  && < 4.15
                    , http-client     >= 0.5  && < 0.8
                    , http-client-tls >= 0.3  && < 0.4
                    , aeson           >= 1.0  && < 1.6
                    , bytestring      >= 0.10 && < 0.12
                    , time            >= 1.6  && < 1.12
                    , text            >= 1.2  && < 1.3
                    , hoauth2         >= 1.16 && < 1.17
                    , uri-bytestring  >= 0.3  && < 0.4
                    , timerep         >= 2.0  && < 2.1
